Using a resizable canvas instead of imageview for better sizing and performances